--- a/src/content/docs/en/ros2-description.mdx
+++ b/src/content/docs/en/ros2-description.mdx
@@ -6,7 +6,7 @@ description: "The crazy world of formats"
 ## The Jungle of Formats
 
 There are some many formats to represent robots (and other things):
-- URDF
+- [URDF (Unified Robot Description Format)](https://wiki.ros.org/urdf)
     - [URDF improvements](https://discourse.ros.org/t/urdf-improvements/30520)
     - [Short-term WG about URDF / description formats](https://discourse.ros.org/t/short-term-wg-about-urdf-description-formats/30843)
     - [xacro](https://wiki.ros.org/xacro) in [Github](https://github.com/ros/xacro)
