--- a/src/content/docs/en/simulators.mdx
+++ b/src/content/docs/en/simulators.mdx
@@ -5,26 +5,53 @@ description: A (almost) complete list of robotics simulators
 
 This list is intended to be as complete as possible but obviously it is virtually impossible to list **ALL** the robot simulators out there, that's the reason why the “almost” in the description of this note. In case you know of a simulator that is not included in this list, here are the possible reasons for its absence:
 - I haven't updated the list yet: there are always new simulators.
-- I have not yet come across it: the simulator can be very niche.
+- I have not yet come across it or the simulator can be very niche.
 - The "simulator" could be a random project of someone on the internet. In that case it is up to my personal judgment to include it or not, depending on the value of the simulator, clearly this is subject to my personal bias.
 
 ## Disambiguations
 
-- [Physics engine - Wikipedia](https://en.wikipedia.org/wiki/Physics_engine) *"is computer software that provides an approximate simulation of certain physical systems, typically classical dynamics, including rigid body dynamics (including collision detection), soft body dynamics, and fluid dynamics."*
-- [Render engine] a list with some examples in [List of 3D rendering software - Wikipedia](https://en.wikipedia.org/wiki/List_of_3D_rendering_software)
-- [Game engine - Wikipedia](https://en.wikipedia.org/wiki/Game_engine) as reference see [List of game engines](https://en.wikipedia.org/wiki/List_of_game_engines): *"is a software framework primarily designed for the development of video games which generally includes relevant libraries and support programs such as a level editor."*
+Below is a list of key terms with their specific meanings to avoid confusion in this context.
+
+- [Physics engine - Wikipedia](https://en.wikipedia.org/wiki/Physics_engine) *"is computer software that provides an approximate simulation of certain physical systems, typically classical dynamics, including rigid body dynamics (including collision detection), soft body dynamics, and fluid dynamics."*.
+- [Render engine (or Renderer)](https://en.wikipedia.org/wiki/Rendering_(computer_graphics)): is the piece of software that is in charge of generating "[...] a photorealistic or non-photorealistic image from input data such as 3D models" . Here you can find a [List of 3D rendering software - Wikipedia](https://en.wikipedia.org/wiki/List_of_3D_rendering_software).
+- [Game engine - Wikipedia](https://en.wikipedia.org/wiki/Game_engine) : *"is a software framework primarily designed for the development of video games which generally includes relevant libraries and support programs such as a level editor, physics engine, renderer, assets management and more."*. Some example from a [List of game engines](https://en.wikipedia.org/wiki/List_of_game_engines).
 - [Robotics simulator - Wikipedia](https://en.wikipedia.org/wiki/Robotics_simulator): *"is a simulator used to create an application for a physical robot without depending on the physical machine, thus saving cost and time."*
+- Simulator Framework: a collection of multiples software components adjusted to work togetter....
 
 What makes a robotics simulator a robotics simulator:
 - robot model support: Support for standard robotic models (URDF, SDF)
 - sensors: LIDAR, cameras, IMU, force-torque
-- Multi-body Dynamics: Simulates rigid and soft body interactions relevant to robots.
+- Multi-body Dynamics (joint types): Simulates rigid and soft body interactions relevant to robots.
 - Sensor Noise & Distortions: Allows realistic sensor imperfections for real-world applicability.
 - physics Fidelity: More focus on realistic kinematics and dynamics rather than high-speed rendering.
 - Direct API: for multiples programming languages
 - communication APIs
 
-## Overview
+## Literature Survey
+
+Importance of simulator in robotics:
+- @tselegkaridisSimulatorsEducationalRobotics2021
+- @camargoSystematicLiteratureReview2021
+- @liuRolePhysicsBasedSimulators2021
+- @choiUseSimulationRobotics2021
+- @reckhausOverviewSimulationEmulation2010
+- @Teixeira2015EducationalRS
+
+General Robotic Simulators surveys:
+- @collinsReviewPhysicsSimulators2021
+
+Aerial robotics:
+- @dimmigSurveySimulatorsAerial2023
+
+Underwater:
+- @aldhaheriUnderwaterRoboticSimulators2025
+
+Swarm robotics:
+- @calderon-arceSwarmRoboticsSimulators2022
+
+
+
+## Simulators
 
 | Name                                                                              | Paper                                         | Physics Engine                                                                    | Rendering                                                                                                    | Models | Features | Languages                                                                                                                                          | Licenses                                                                            | Active                  | Source code                                                  |
 |-----------------------------------------------------------------------------------|-----------------------------------------------|-----------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------|--------|----------|----------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------|-------------------------|--------------------------------------------------------------|
@@ -52,32 +79,19 @@ What makes a robotics simulator a robotics simulator:
 | [OpenRAVE](https://www.openrave.org/)                                             | @diankovAutomatedConstructionRobotic2010      | Bullet                                                                            | ?                                                                                                            |        |          |                                                                                                                                                    | Apache 2.0, (core lib) GNU LGPL                                                     |                         | [github](https://github.com/rdiankov/openrave)               |
 
 
-| Physics Engine                                                                                                                        |                                                                                                              | License                                                                                    | Source Code                                                            |
-|---------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------|------------------------------------------------------------------------|
-| 🔍 [Chrono](https://projectchrono.org/) under Project Chrono                                                                          |                                                                                                              | 3-Clause BSD License                                                                       | [github](https://github.com/projectchrono/chrono)                      |
-| [Rapier](https://rapier.rs/)                                                                                                          | WebAssembly ready                                                                                            | Apache 2.0                                                                                 | [github](https://github.com/dimforge/rapier)                           |
-| [DARTsim](https://dartsim.github.io/) (Dynamic Animation and Robotics Toolkit)                                                        |                                                                                                              | 2-Clause BSD License                                                                       | [github](https://github.com/dartsim/dart)                              |
-| [TPE](https://community.gazebosim.org/t/announcing-new-physics-engine-tpe-trivial-physics-engine/629) (Trivial Physics Engine)        | Trivial Physics Engine, A custom physics engine focused on fast kinematics of large environments for Gazebo. | Apache 2.0                                                                                 | [github](https://github.com/gazebosim/gz-physics/tree/gz-physics8/tpe) |
-| [Bullet](https://pybullet.org/wordpress/)                                                                                             |                                                                                                              | zlib                                                                                       | [github](https://github.com/bulletphysics/bullet3)                     |
-| [PhysX](https://nvidia-omniverse.github.io/PhysX/physx/5.5.1/)                                                                        |                                                                                                              | 3-Clause BSD License                                                                       | [github](https://github.com/NVIDIA-Omniverse/PhysX)                    |
-| [MuJoCo](https://mujoco.org/), paper @todorovMuJoCoPhysicsEngine2012, source code [github](https://github.com/google-deepmind/mujoco) |                                                                                                              | Apache 2.0                                                                                 | [github](https://github.com/google-deepmind/mujoco)                    |
-| [ODE (Open Dynamics Engine)](https://www.ode.org/)                                                                                    |                                                                                                              | The GNU Lesser General Public License version 2.1 or any later.<br/>The BSD-style License. | [bitbucket](https://bitbucket.org/odedevs/ode/src/master/)             |
-| [Vortex Studio](https://www.cm-labs.com/en/vortex-studio/)                                                                            |                                                                                                              | Commercial                                                                                 | -                                                                      |
-| [Newton Dynamics](https://newtondynamics.com/forum/newton.php)                                                                        |                                                                                                              | zlib                                                                                       | [github](https://github.com/MADEAPPS/newton-dynamics/)                 |
-| (2D) [Chipmunk](https://chipmunk-physics.net/)                                                                                        |                                                                                                              |                                                                                            |                                                                        |
-| (2D) [Box2D](https://box2d.org/), paper @cattoIterativeDynamicsTemporal2005                                                           |                                                                                                              | MIT License                                                                                | [github](https://github.com/erincatto/box2d)                           |
-| [Simscape Multibody](https://www.mathworks.com/products/simscape-multibody.html) (formerly SimMechanics) product of MathWorks         |                                                                                                              | Commercial                                                                                 | -                                                                      |
+Subject specific:
+- [Neurorobotics Platform (NRP)](https://neurorobotics.net/): Internet-accessible simulation of robots controlled by spiking neural networks, source code [bitbucket](https://bitbucket.org/hbpneurorobotics/neurorobotics-platform/src/master/)
+- [FlightGear](https://www.flightgear.org/), [gitlab](https://gitlab.com/flightgear/flightgear)
+- [HoloOcean](https://byu-holoocean.github.io/holoocean-docs/v1.0.0/index.html), based on Unreal-engine.
+- [mrs_multirotor_simulator](https://github.com/ctu-mrs/mrs_multirotor_simulator), "Minimalistic ROS node for simulating quadrotor dynamics, part of the "mrs_uav_core" package."
 
-Others Physics Engine:
-- [Chaos Physics](https://dev.epicgames.com/documentation/en-us/unreal-engine/chaos-physics-overview?application_version=4.27) built-in in Unreal Engine
+Others:
+- [RobotDART](https://nosalro.github.io/robot_dart/), paper: @chatzilygeroudisRobotDARTVersatileRobot2024, repo: [github](https://github.com/NOSALRO/robot_dart)
 
-Game engines:
-- [UE 4 uses PhysX as default](https://dev.epicgames.com/documentation/en-us/unreal-engine/physics?application_version=4.27), EpicGame is introducing [Chaos Physics](https://dev.epicgames.com/documentation/en-us/unreal-engine/chaos-physics-overview?application_version=4.27) as future replacement for PhysX.
-- [Unity uses PhysX as physic engine](https://docs.unity3d.com/Manual/PhysicsSection.html)
-- [O3DE](https://o3de.org/) open-source, [github](https://github.com/o3de/o3de)
 
-List frameworks and integrations:
-- gazebo: [Gazebo integrations](https://gazebosim.org/docs/latest/projects_using_gazebo/#gazebo-integrations)
+Cool projects:
+- [Hexapod Robot Simulator](https://github.com/mithi/hexapod-robot-simulator) by Mithi Sevilla
+- [robot-gui](https://github.com/glumb/robot-gui) by Maximilian Beck
 
 Multi-body dynamics:
 - rigid: rigid bodies
@@ -103,66 +117,46 @@ Features on Simulation, Analysis, Planning, Control Design:
 - sdf: sdf parser
 
 
-Cool projects:
-- [Hexapod Robot Simulator](https://github.com/mithi/hexapod-robot-simulator) by Mithi Sevilla
-- [robot-gui](https://github.com/glumb/robot-gui) by Maximilian Beck
+## Physics Engines
 
-Subject specific:
-- [Neurorobotics Platform (NRP)](https://neurorobotics.net/): Internet-accessible simulation of robots controlled by spiking neural networks, source code [bitbucket](https://bitbucket.org/hbpneurorobotics/neurorobotics-platform/src/master/)
-- [FlightGear](https://www.flightgear.org/), [gitlab](https://gitlab.com/flightgear/flightgear)
+| Physics Engine                                                                                                                        |                                                                                                              | License                                                                                    | Source Code                                                            |
+|---------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------|------------------------------------------------------------------------|
+| 🔍 [Chrono](https://projectchrono.org/) under Project Chrono                                                                          |                                                                                                              | 3-Clause BSD License                                                                       | [github](https://github.com/projectchrono/chrono)                      |
+| [Rapier](https://rapier.rs/)                                                                                                          | WebAssembly ready                                                                                            | Apache 2.0                                                                                 | [github](https://github.com/dimforge/rapier)                           |
+| [DARTsim](https://dartsim.github.io/) (Dynamic Animation and Robotics Toolkit)                                                        |                                                                                                              | 2-Clause BSD License                                                                       | [github](https://github.com/dartsim/dart)                              |
+| [TPE](https://community.gazebosim.org/t/announcing-new-physics-engine-tpe-trivial-physics-engine/629) (Trivial Physics Engine)        | Trivial Physics Engine, A custom physics engine focused on fast kinematics of large environments for Gazebo. | Apache 2.0                                                                                 | [github](https://github.com/gazebosim/gz-physics/tree/gz-physics8/tpe) |
+| [Bullet](https://pybullet.org/wordpress/)                                                                                             |                                                                                                              | zlib                                                                                       | [github](https://github.com/bulletphysics/bullet3)                     |
+| [PhysX](https://nvidia-omniverse.github.io/PhysX/physx/5.5.1/)                                                                        |                                                                                                              | 3-Clause BSD License                                                                       | [github](https://github.com/NVIDIA-Omniverse/PhysX)                    |
+| [MuJoCo](https://mujoco.org/), paper @todorovMuJoCoPhysicsEngine2012, source code [github](https://github.com/google-deepmind/mujoco) |                                                                                                              | Apache 2.0                                                                                 | [github](https://github.com/google-deepmind/mujoco)                    |
+| [ODE (Open Dynamics Engine)](https://www.ode.org/)                                                                                    |                                                                                                              | The GNU Lesser General Public License version 2.1 or any later.<br/>The BSD-style License. | [bitbucket](https://bitbucket.org/odedevs/ode/src/master/)             |
+| [Vortex Studio](https://www.cm-labs.com/en/vortex-studio/)                                                                            |                                                                                                              | Commercial                                                                                 | -                                                                      |
+| [Newton Dynamics](https://newtondynamics.com/forum/newton.php)                                                                        |                                                                                                              | zlib                                                                                       | [github](https://github.com/MADEAPPS/newton-dynamics/)                 |
+| (2D) [Chipmunk](https://chipmunk-physics.net/)                                                                                        |                                                                                                              |                                                                                            |                                                                        |
+| (2D) [Box2D](https://box2d.org/), paper @cattoIterativeDynamicsTemporal2005                                                           |                                                                                                              | MIT License                                                                                | [github](https://github.com/erincatto/box2d)                           |
+| [Simscape Multibody](https://www.mathworks.com/products/simscape-multibody.html) (formerly SimMechanics) product of MathWorks         |                                                                                                              | Commercial                                                                                 | -                                                                      |
 
-## Frameworks
+Others Physics Engine:
+- [Chaos Physics](https://dev.epicgames.com/documentation/en-us/unreal-engine/chaos-physics-overview?application_version=4.27) built-in in Unreal Engine
+
+Game engines:
+- [UE 4 uses PhysX as default](https://dev.epicgames.com/documentation/en-us/unreal-engine/physics?application_version=4.27), EpicGame is introducing [Chaos Physics](https://dev.epicgames.com/documentation/en-us/unreal-engine/chaos-physics-overview?application_version=4.27) as future replacement for PhysX.
+- [Unity uses PhysX as physic engine](https://docs.unity3d.com/Manual/PhysicsSection.html)
+- [O3DE](https://o3de.org/) open-source, [github](https://github.com/o3de/o3de)
+
+## Render Engines
+
+List frameworks and integrations:
+- gazebo: [Gazebo integrations](https://gazebosim.org/docs/latest/projects_using_gazebo/#gazebo-integrations)
+
+## Simulation Frameworks
 
 - [AI2-Thor](https://ai2thor.allenai.org/), @kolveAI2THORInteractive3D2022, source code [github](https://github.com/allenai/ai2thor)
 - [PyBullet Industrial](https://pybullet-industrial.readthedocs.io/en/latest/how_to_use.html), @Baumgartner_PyBullet_Industrial_A_2023, [github](https://github.com/WBK-Robotics/pybullet_industrial)
 - [ManiSkill](https://www.maniskill.ai/) powered SAPIEN, @taoManiSkill3GPUParallelized2024 [github](https://github.com/haosulab/ManiSkill)
 - [FlightGoogles](https://flightgoggles.mit.edu/) based on Unity, @guerraFlightGogglesModularFramework2019, [github](https://github.com/mit-aera/FlightGoggles)
-
-## from /Ly0n/awesome-robotic-tooling
-
-
-- scenario_runner - Traffic scenario definition and execution engine.
-- lgsv - LG Electronics America R&D Center has developed an HDRP Unity-based multi-robot simulator for autonomous vehicle developers.
-- deepdive - End-to-end simulation for self-driving cars.
-- self-driving-car-sim - A self-driving car simulator built with Unity.
-- car_demo - This is a simulation of a Prius in gazebo 9 with sensor data being published using ROS kinetic.
-- sumo - Eclipse SUMO is an open source, highly portable, microscopic and continuous road traffic simulation package designed to handle large road networks.
-- open-simulation-interface - A generic interface for the environmental perception of automated driving functions in virtual scenarios.
-- ESIM - An Open Event Camera Simulator.
-- Menge - Crowd Simulation Framework.
-- pedsim_ros - Pedestrian simulator powered by the social force model for Gazebo.
-- opencrg - Open file formats and open source tools for the detailed description, creation and evaluation of road surfaces.
-- esmini - A basic OpenSCENARIO player.
-- OpenSceneGraph - An open source high performance 3D graphics toolkit, used by application developers in fields such as visual simulation, games, virtual reality, scientific visualization and modelling.
-- morse - An academic robotic simulator, based on the Blender Game Engine and the Bullet Physics engine.
-- ROSIntegrationVision - Support for ROS-enabled RGBD data acquisition in Unreal Engine Projects.
-- fetch_gazebo - Contains the Gazebo simulation for Fetch Robotics Fetch and Freight Research Edition Robots.
-- rotors_simulator - Provides some multirotor models.
-- flow - A computational framework for deep RL and control experiments for traffic microsimulation.
-- gnss-ins-sim - GNSS + inertial navigation, sensor fusion simulator. Motion trajectory generator, sensor models, and navigation.
-- Ignition Robotics - Test control strategies in safety, and take advantage of simulation in continuous integration tests.
-- simulation assets for the SubT - This collection contains simulation assets for the SubT Challenge Virtual Competition in Gazebo.
-- gazebo_ros_motors - Contains currently two motor plugins for Gazebo, one with an ideal speed controller and one without a controller that models a DC motor.
-- map2gazebo - ROS package for creating Gazebo environments from 2D maps.
-- sim_vehicle_dynamics - Vehicle Dynamics Simulation Software of TUM Roborace Team.
-- gym-carla - An OpenAI gym wrapper for CARLA simulator.
-- simbody - High-performance C++ multibody dynamics/physics library for simulating articulated biomechanical and mechanical systems like vehicles, robots, and the human skeleton.
-- gazebo_models - This repository holds the Gazebo model database.
-- pylot - Autonomous driving platform running on the CARLA simulator.
-- flightmare - Flightmare is composed of two main components: a configurable rendering engine built on Unity and a flexible physics engine for dynamics simulation.
-- champ - ROS Packages for CHAMP Quadruped Controller.
-- rex-gym - OpenAI Gym environments for an open-source quadruped robot (SpotMicro).
-- Trick - Developed at the NASA Johnson Space Center, is a powerful simulation development framework that enables users to build applications for all phases of space vehicle development.
-- usv_sim_lsa - Unmanned Surface Vehicle simulation on Gazebo with water current and winds.
-- 42 - Simulation for spacecraft attitude control system analysis and design.
-- Complete_Street_Rule - A scenario oriented design tool intended to enable users to quickly create procedurally generated multimodal streets in ArcGIS CityEngine.
-- AutoCore simulation - Provides test environment for Autoware and still during early development, contents below may changed during updates.
-- fields-ignition - Generate random crop fields for Ignition Gazebo.
-- Unity-Robotics-Hub - Central repository for tools, tutorials, resources, and documentation for robotic simulation in Unity.
-- BlueSky - The goal of BlueSky is to provide everybody who wants to visualize, analyze or simulate air traffic with a tool to do so without any restrictions, licenses or limitations.
-- Cloe - Empowers developers of automated-driving software components by providing a unified interface to closed-loop simulation.
-- Dynamic_logistics_Warehouse - Gazebo simulation of dynamics environment in warehouses.
-- OpenCDA - A generalized framework for prototyping full-stack cooperative driving automation applications under CARLA+SUMO.
+- list that mix simulators and frameworks:
+    - [Simulators - Awesome robotic tooling](https://github.com/Ly0n/awesome-robotic-tooling?tab=readme-ov-file#simulation) by Tobias Augspurger, [Ly0n](https://github.com/Ly0n) in github.
+    - [Simulators - Awesome Robotics Libraries](https://github.com/jslee02/awesome-robotics-libraries?tab=readme-ov-file#simulators) by Jeongseok (JS) Lee, [@jslee02](https://github.com/jslee02) in github.
 
 
 ARGoS:
